--- a/Clustering wih scikitlearn.ipynb
+++ b/Clustering wih scikitlearn.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import required modules and load data file"
+    "### Import required modules and load data file\n",
+    "Gracias!"
    ]
   },
   {
@@ -20,9 +21,9 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "error",
      "ename": "FileNotFoundError",
      "evalue": "[Errno 2] File b'readonly/fruit_data_with_colors.txt' does not exist: b'readonly/fruit_data_with_colors.txt'",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
@@ -316,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
